# pyfrustum

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
examples/: marching_cubes_sphere.py  point_cloud.py  simple_mesh.py
src/: lib.rs
tests/: test_basic.py
