[package]
name = "pyfrustum"
version = "0.1.0"
edition = "2021"
description = "Python bindings for Frustum GPU rendering framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gcol33/pyfrustum"

[lib]
name = "frustum"
crate-type = ["cdylib"]

[dependencies]
frustum-core = { git = "https://github.com/gcol33/frustum.git", tag = "v0.1.0" }
frustum-render = { git = "https://github.com/gcol33/frustum.git", tag = "v0.1.0" }
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
